# vibe_cockpit

./: .gitignore  AGENTS.md  Cargo.toml  UPGRADE_LOG.md  create_beads.sh
.beads/: issues.jsonl
.beads/.br_history/: issues.20260312_170824_355132540.jsonl  issues.20260312_170825_616366402.jsonl  issues.20260312_170840_551498827.jsonl  issues.20260312_170937_373891884.jsonl  issues.20260312_171017_683024769.jsonl  issues.20260312_171032_414204642.jsonl  issues.20260312_171056_700387981.jsonl  issues.20260312_171113_540517145.jsonl  issues.20260312_171118_154298972.jsonl  issues.20260312_171148_715686030.jsonl  issues.20260312_171201_735264951.jsonl  issues.20260312_171220_097173563.jsonl  issues.20260312_171248_169948548.jsonl  issues.20260312_171300_305700313.jsonl  issues.20260312_171313_291325606.jsonl  issues.20260312_171340_952999203.jsonl  issues.20260312_171351_488123754.jsonl  issues.20260312_171420_391300570.jsonl  issues.20260312_171447_227452217.jsonl  issues.20260312_171456_713568222.jsonl  issues.20260312_171512_755495500.jsonl  issues.20260312_171629_451316422.jsonl  issues.20260312_171640_452329117.jsonl  issues.20260312_171646_952240648.jsonl  issues.20260312_171702_563641664.jsonl  issues.20260312_171717_135379366.jsonl  issues.20260312_171730_885399490.jsonl  issues.20260312_171746_819847336.jsonl  issues.20260312_171802_336618591.jsonl  issues.20260312_173021_305883674.jsonl  issues.20260312_173043_473819741.jsonl  issues.20260312_173333_143260528.jsonl  issues.20260312_173345_077442254.jsonl  issues.20260312_173412_854278709.jsonl  issues.20260312_173837_915016238.jsonl  issues.20260312_180855_154241227.jsonl  issues.20260313_060706_936740802.jsonl  issues.20260313_061710_507335352.jsonl  issues.20260313_061817_621414061.jsonl  issues.20260313_062051_522695440.jsonl  (+25 more)
crates/vc_alert/: Cargo.toml
crates/vc_alert/src/: lib.rs  routing.rs
crates/vc_cli/: Cargo.toml
crates/vc_cli/src/: lib.rs  robot.rs
crates/vc_collect/: Cargo.toml
crates/vc_collect/src/: executor.rs  lib.rs  machine.rs  node.rs  probe.rs  redact.rs  remote.rs  scheduler.rs  ssh.rs
crates/vc_collect/src/collectors/: afsc.rs  beads.rs  caam.rs  cass.rs  caut.rs  cloud_bench.rs  dcg.rs  github.rs  mcp_mail.rs  mod.rs  ntm.rs  pt.rs  rano.rs  rch.rs  sysmoni.rs
crates/vc_config/src/: lib.rs
crates/vc_guardian/: Cargo.toml
crates/vc_guardian/src/: autogen.rs  autopilot.rs  lib.rs
crates/vc_knowledge/src/: lib.rs  mining.rs
crates/vc_mcp/: Cargo.toml
crates/vc_mcp/src/: lib.rs
crates/vc_oracle/: Cargo.toml
crates/vc_oracle/src/: dna.rs  evolution.rs  experiment.rs  lib.rs  rate_limit.rs
crates/vc_query/src/: cost.rs  digest.rs  guardrails.rs  lib.rs  nl.rs
crates/vc_store/: Cargo.toml
crates/vc_store/src/: lib.rs  migrations.rs  schema.rs
crates/vc_store/src/migrations/: 001_initial_schema.sql  002_machine_registry.sql  009_cloud_benchmarker.sql  011_collector_health.sql  012_health_scores.sql  013_alert_delivery_log.sql  027_ntm_sessions_snapshot_reconcile.sql
crates/vc_tui/: Cargo.toml
crates/vc_tui/src/: lib.rs
crates/vc_tui/src/screens/: accounts.rs  alerts.rs  beads.rs  events.rs  guardian.rs  machines.rs  mail.rs  mod.rs  rch.rs  sessions.rs
crates/vc_tui/tests/: snapshot_screens.rs
crates/vc_web/: Cargo.toml
crates/vc_web/src/: auth.rs  lib.rs
src/: main.rs
tests/: collector_parsing.rs  config_smoke.rs
tests/common/: mod.rs
tests/e2e/: tui_rendering.rs
tests/e2e/collectors/: test_dcg_collect.sh  test_fallback_probe.sh  test_mcp_mail_collect.sh  test_rch_collect.sh  test_ru_collect.sh  test_ru_mock.sh  test_sysmoni_collect.sh
tests/e2e/system/: e2e_runtime_boot.sh  test_runtime_boot.sh
web/: jest.config.js  package-lock.json  package.json  tsconfig.json
web/src/__tests__/: HealthCard.test.tsx  StatusBadge.test.tsx  api.test.ts
web/src/app/: layout.tsx  page.tsx
web/src/app/accounts/: page.tsx
web/src/app/alerts/: page.tsx
web/src/app/guardian/: page.tsx
web/src/app/machines/: page.tsx
web/src/app/oracle/: page.tsx
web/src/app/sessions/: page.tsx
web/src/app/settings/: page.tsx
web/src/components/: HealthCard.tsx  NavBar.tsx  StatusBadge.tsx
web/src/lib/: api.ts
