[package]
name = "vc_alert"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Alerting system for Vibe Cockpit"

[lints]
workspace = true

[dependencies]
vc_config.workspace = true
vc_store.workspace = true
serde.workspace = true
serde_json.workspace = true
asupersync.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
dashmap.workspace = true
reqwest.workspace = true

[dev-dependencies]
futures.workspace = true
proptest.workspace = true
mockall.workspace = true
asupersync.workspace = true
