[package]
name = "vc_guardian"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Self-healing protocols for Vibe Cockpit"

[lints]
workspace = true

[dependencies]
vc_config.workspace = true
vc_store.workspace = true
vc_alert.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true

[dev-dependencies]
proptest.workspace = true
mockall.workspace = true
