[package]
name = "vc_oracle"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Prediction engine for Vibe Cockpit"

[lints]
workspace = true

[dependencies]
vc_config.workspace = true
vc_store.workspace = true
vc_query.workspace = true
serde.workspace = true
serde_json.workspace = true
asupersync.workspace = true
asupersync-tokio-compat.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
rand.workspace = true

[dev-dependencies]
proptest.workspace = true
mockall.workspace = true
