[package]
name = "vc_store"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "DuckDB storage layer for Vibe Cockpit"

[lints]
workspace = true

[dependencies]
vc_config.workspace = true
duckdb.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
anyhow.workspace = true

[dev-dependencies]
proptest.workspace = true
mockall.workspace = true
