[package]
name = "vc_web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Web server and API for Vibe Cockpit"

[lints]
workspace = true

[dependencies]
vc_config.workspace = true
vc_store.workspace = true
vc_query.workspace = true
axum = { workspace = true, features = ["ws"] }
futures.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
asupersync.workspace = true
asupersync-tokio-compat.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true

[dev-dependencies]
proptest.workspace = true
mockall.workspace = true
http-body-util = "0.1"
